# tokkitang-server

./: .env.sample  .gitignore  Cargo.toml  README.md  docs.yaml
.github/workflows/: deploy.yml
aws-lambda-rust-runtime/examples/basic-lambda/: Cargo.toml
aws-lambda-rust-runtime/lambda-runtime/src/: lib.rs
lambda-runtime/src/: lib.rs
lambda-web-local/: Cargo.toml
lambda-web-local/src/: hyper014.rs  request.rs
src/: main.rs
src/extensions/: dynamo.rs  mod.rs  s3.rs
src/middlewares/: auth.rs  mod.rs  response_header.rs
src/models/: entity.rs  mod.rs  note.rs  project.rs  team.rs  team_invite.rs  team_user.rs  user copy.rs  user.rs
src/models/index/: index_email.rs  mod.rs
src/routes/: mod.rs
src/routes/app/: handler.rs
src/routes/app/dto/: health_response.rs
src/routes/auth/: handler.rs  service.rs
src/routes/auth/dto/: github_access_token_request.rs  github_access_token_response.rs  github_login_request.rs  github_login_response.rs  github_user_response.rs  mod.rs
src/routes/entity/: handler.rs  service.rs
src/routes/entity/dto/: create_entity_request.rs  create_entity_response.rs  get_entity_response.rs  get_project_list_response.rs  mod.rs  update_entity_request.rs  update_entity_response.rs
src/routes/note/: handler.rs  service.rs
src/routes/note/dto/: create_note_request.rs  create_note_response.rs  get_note_response.rs  mod.rs  update_note_request.rs  update_note_response.rs
src/routes/project/: handler.rs  service.rs
src/routes/project/dto/: create_project_request.rs  create_project_response.rs  get_entity_list_response.rs  get_note_list_response.rs  get_project_response.rs  mod.rs  update_project_request.rs  update_project_response.rs
src/routes/redirect/: handler.rs
src/routes/redirect/dto/: github_redirect_code_request.rs  mod.rs
src/routes/team/: handler.rs  service.rs
src/routes/team/dto/: change_authority_request.rs  mod.rs  (+9 more)
src/routes/user/: handler.rs  service.rs
src/routes/utils/: handler.rs  service.rs
src/utils/: email.rs  error.rs  hash.rs  http.rs  mod.rs
static/: test.html
(+9 files in other folders)
