[package]
name = "modeler-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda-web = { path="lambda-web-local", features=["hyper"] }
axum = "0.6.2"
tokio = { version = "1" }