[package]
name = "modeler-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda-web = { version = "0.2.1", features=["hyper"] }
axum = { version = "0.6.2", features = ["multipart"] }
tokio = { version = "1" }
sha256 = "1.1.1"
jsonwebtoken = "8.2.0"
uuid = {version = "1.2.2", features=["v4", "fast-rng", "macro-diagnostics"] }
serde_json = "1.0.48"
serde = { version="1.0.105", features=["derive"] }
url = { version = "2", features = ["serde"] }
aws-config = "0.53.0"
aws-sdk-dynamodb = "0.23.0"
aws-sdk-s3 = "0.23.0"
epoch-timestamp = "1.0.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0.38"
tower-http = { version = "0.3.5", features=["cors"] }

# 배포 전용 디펜던시
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
